fix: overflow in preview modal question title [FD - 94] (#111)
* fix: fix the overflow in modal preview question title

* fix: fix the lint issue

---------

--- a/src/pages/template-library/components/preview-modal/PreviewModal.scss
+++ b/src/pages/template-library/components/preview-modal/PreviewModal.scss
@@ -223,6 +223,7 @@
     align-items: flex-start;
   }
   &__question-item__title-wrapper {
+    width: 100%;
     @include flex-box(row);
     gap: var(--space-m);
   }
